// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar (unit tests) when disabled dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-calendar>
  <template shadowrootmode="open">
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-calendar-day day="31" disabled=""></kv-calendar-day>
            <kv-calendar-day day="1"></kv-calendar-day>
            <kv-calendar-day day="2"></kv-calendar-day>
            <kv-calendar-day day="3"></kv-calendar-day>
            <kv-calendar-day day="4"></kv-calendar-day>
            <kv-calendar-day day="5" disabled=""></kv-calendar-day>
            <kv-calendar-day day="6" disabled=""></kv-calendar-day>
            <kv-calendar-day day="7" disabled=""></kv-calendar-day>
            <kv-calendar-day day="8"></kv-calendar-day>
            <kv-calendar-day day="9"></kv-calendar-day>
            <kv-calendar-day day="10"></kv-calendar-day>
            <kv-calendar-day day="11"></kv-calendar-day>
            <kv-calendar-day day="12"></kv-calendar-day>
            <kv-calendar-day day="13"></kv-calendar-day>
            <kv-calendar-day day="14"></kv-calendar-day>
            <kv-calendar-day day="15"></kv-calendar-day>
            <kv-calendar-day day="16"></kv-calendar-day>
            <kv-calendar-day day="17"></kv-calendar-day>
            <kv-calendar-day day="18"></kv-calendar-day>
            <kv-calendar-day day="19"></kv-calendar-day>
            <kv-calendar-day day="20"></kv-calendar-day>
            <kv-calendar-day day="21"></kv-calendar-day>
            <kv-calendar-day day="22"></kv-calendar-day>
            <kv-calendar-day day="23"></kv-calendar-day>
            <kv-calendar-day day="24"></kv-calendar-day>
            <kv-calendar-day day="25"></kv-calendar-day>
            <kv-calendar-day day="26"></kv-calendar-day>
            <kv-calendar-day day="27"></kv-calendar-day>
            <kv-calendar-day day="28"></kv-calendar-day>
            <kv-calendar-day day="29"></kv-calendar-day>
            <kv-calendar-day day="30"></kv-calendar-day>
            <kv-calendar-day day="31"></kv-calendar-day>
            <kv-calendar-day day="1" disabled=""></kv-calendar-day>
            <kv-calendar-day day="2" disabled=""></kv-calendar-day>
            <kv-calendar-day day="3" disabled=""></kv-calendar-day>
            <kv-calendar-day day="4" disabled=""></kv-calendar-day>
            <kv-calendar-day day="5" disabled=""></kv-calendar-day>
            <kv-calendar-day day="6" disabled=""></kv-calendar-day>
            <kv-calendar-day day="7" disabled=""></kv-calendar-day>
            <kv-calendar-day day="8" disabled=""></kv-calendar-day>
            <kv-calendar-day day="9" disabled=""></kv-calendar-day>
            <kv-calendar-day day="10" disabled=""></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-calendar>
`;

exports[`Calendar (unit tests) when initial date is passed and is a valid date should match the snapshot 1`] = `
<kv-calendar initial-date="2022-08-01">
  <template shadowrootmode="open">
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-calendar-day day="31" disabled=""></kv-calendar-day>
            <kv-calendar-day day="1"></kv-calendar-day>
            <kv-calendar-day day="2"></kv-calendar-day>
            <kv-calendar-day day="3"></kv-calendar-day>
            <kv-calendar-day day="4"></kv-calendar-day>
            <kv-calendar-day day="5"></kv-calendar-day>
            <kv-calendar-day day="6"></kv-calendar-day>
            <kv-calendar-day day="7"></kv-calendar-day>
            <kv-calendar-day day="8"></kv-calendar-day>
            <kv-calendar-day day="9"></kv-calendar-day>
            <kv-calendar-day day="10"></kv-calendar-day>
            <kv-calendar-day day="11"></kv-calendar-day>
            <kv-calendar-day day="12"></kv-calendar-day>
            <kv-calendar-day day="13"></kv-calendar-day>
            <kv-calendar-day day="14"></kv-calendar-day>
            <kv-calendar-day day="15"></kv-calendar-day>
            <kv-calendar-day day="16"></kv-calendar-day>
            <kv-calendar-day day="17"></kv-calendar-day>
            <kv-calendar-day day="18"></kv-calendar-day>
            <kv-calendar-day day="19"></kv-calendar-day>
            <kv-calendar-day day="20"></kv-calendar-day>
            <kv-calendar-day day="21"></kv-calendar-day>
            <kv-calendar-day day="22"></kv-calendar-day>
            <kv-calendar-day day="23"></kv-calendar-day>
            <kv-calendar-day day="24"></kv-calendar-day>
            <kv-calendar-day day="25"></kv-calendar-day>
            <kv-calendar-day day="26"></kv-calendar-day>
            <kv-calendar-day day="27"></kv-calendar-day>
            <kv-calendar-day day="28"></kv-calendar-day>
            <kv-calendar-day day="29"></kv-calendar-day>
            <kv-calendar-day day="30"></kv-calendar-day>
            <kv-calendar-day day="31"></kv-calendar-day>
            <kv-calendar-day day="1" disabled=""></kv-calendar-day>
            <kv-calendar-day day="2" disabled=""></kv-calendar-day>
            <kv-calendar-day day="3" disabled=""></kv-calendar-day>
            <kv-calendar-day day="4" disabled=""></kv-calendar-day>
            <kv-calendar-day day="5" disabled=""></kv-calendar-day>
            <kv-calendar-day day="6" disabled=""></kv-calendar-day>
            <kv-calendar-day day="7" disabled=""></kv-calendar-day>
            <kv-calendar-day day="8" disabled=""></kv-calendar-day>
            <kv-calendar-day day="9" disabled=""></kv-calendar-day>
            <kv-calendar-day day="10" disabled=""></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-calendar>
`;

exports[`Calendar (unit tests) when selected dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-calendar>
  <template shadowrootmode="open">
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-calendar-day day="31" disabled=""></kv-calendar-day>
            <kv-calendar-day day="1"></kv-calendar-day>
            <kv-calendar-day day="2"></kv-calendar-day>
            <kv-calendar-day day="3"></kv-calendar-day>
            <kv-calendar-day day="4"></kv-calendar-day>
            <kv-calendar-day active="" day="5" israngestartdate=""></kv-calendar-day>
            <kv-calendar-day active="" day="6" isbetweenselecteddates=""></kv-calendar-day>
            <kv-calendar-day active="" day="7" israngeenddate=""></kv-calendar-day>
            <kv-calendar-day day="8"></kv-calendar-day>
            <kv-calendar-day day="9"></kv-calendar-day>
            <kv-calendar-day day="10"></kv-calendar-day>
            <kv-calendar-day day="11"></kv-calendar-day>
            <kv-calendar-day day="12"></kv-calendar-day>
            <kv-calendar-day day="13"></kv-calendar-day>
            <kv-calendar-day day="14"></kv-calendar-day>
            <kv-calendar-day day="15"></kv-calendar-day>
            <kv-calendar-day day="16"></kv-calendar-day>
            <kv-calendar-day day="17"></kv-calendar-day>
            <kv-calendar-day day="18"></kv-calendar-day>
            <kv-calendar-day day="19"></kv-calendar-day>
            <kv-calendar-day day="20"></kv-calendar-day>
            <kv-calendar-day day="21"></kv-calendar-day>
            <kv-calendar-day day="22"></kv-calendar-day>
            <kv-calendar-day day="23"></kv-calendar-day>
            <kv-calendar-day day="24"></kv-calendar-day>
            <kv-calendar-day day="25"></kv-calendar-day>
            <kv-calendar-day day="26"></kv-calendar-day>
            <kv-calendar-day day="27"></kv-calendar-day>
            <kv-calendar-day day="28"></kv-calendar-day>
            <kv-calendar-day day="29"></kv-calendar-day>
            <kv-calendar-day day="30"></kv-calendar-day>
            <kv-calendar-day day="31"></kv-calendar-day>
            <kv-calendar-day day="1" disabled=""></kv-calendar-day>
            <kv-calendar-day day="2" disabled=""></kv-calendar-day>
            <kv-calendar-day day="3" disabled=""></kv-calendar-day>
            <kv-calendar-day day="4" disabled=""></kv-calendar-day>
            <kv-calendar-day day="5" disabled=""></kv-calendar-day>
            <kv-calendar-day day="6" disabled=""></kv-calendar-day>
            <kv-calendar-day day="7" disabled=""></kv-calendar-day>
            <kv-calendar-day day="8" disabled=""></kv-calendar-day>
            <kv-calendar-day day="9" disabled=""></kv-calendar-day>
            <kv-calendar-day day="10" disabled=""></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-calendar>
`;

exports[`Calendar (unit tests) when uses default props should match the snapshot 1`] = `
<kv-calendar>
  <template shadowrootmode="open">
    <div class="calendar">
      <div class="calendar__header">
        <div class="navigator">
          <kv-icon name="kv-nav-close"></kv-icon>
        </div>
        <div class="month">
          August 2022
        </div>
        <div class="navigator">
          <kv-icon name="kv-nav-open"></kv-icon>
        </div>
      </div>
      <div class="calendar__body">
        <div class="calendar-month">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <kv-calendar-day day="31" disabled=""></kv-calendar-day>
            <kv-calendar-day day="1"></kv-calendar-day>
            <kv-calendar-day day="2"></kv-calendar-day>
            <kv-calendar-day day="3"></kv-calendar-day>
            <kv-calendar-day day="4"></kv-calendar-day>
            <kv-calendar-day day="5"></kv-calendar-day>
            <kv-calendar-day day="6"></kv-calendar-day>
            <kv-calendar-day day="7"></kv-calendar-day>
            <kv-calendar-day day="8"></kv-calendar-day>
            <kv-calendar-day day="9"></kv-calendar-day>
            <kv-calendar-day day="10"></kv-calendar-day>
            <kv-calendar-day day="11"></kv-calendar-day>
            <kv-calendar-day day="12"></kv-calendar-day>
            <kv-calendar-day day="13"></kv-calendar-day>
            <kv-calendar-day day="14"></kv-calendar-day>
            <kv-calendar-day day="15"></kv-calendar-day>
            <kv-calendar-day day="16"></kv-calendar-day>
            <kv-calendar-day day="17"></kv-calendar-day>
            <kv-calendar-day day="18"></kv-calendar-day>
            <kv-calendar-day day="19"></kv-calendar-day>
            <kv-calendar-day day="20"></kv-calendar-day>
            <kv-calendar-day day="21"></kv-calendar-day>
            <kv-calendar-day day="22"></kv-calendar-day>
            <kv-calendar-day day="23"></kv-calendar-day>
            <kv-calendar-day day="24"></kv-calendar-day>
            <kv-calendar-day day="25"></kv-calendar-day>
            <kv-calendar-day day="26"></kv-calendar-day>
            <kv-calendar-day day="27"></kv-calendar-day>
            <kv-calendar-day day="28"></kv-calendar-day>
            <kv-calendar-day day="29"></kv-calendar-day>
            <kv-calendar-day day="30"></kv-calendar-day>
            <kv-calendar-day day="31"></kv-calendar-day>
            <kv-calendar-day day="1" disabled=""></kv-calendar-day>
            <kv-calendar-day day="2" disabled=""></kv-calendar-day>
            <kv-calendar-day day="3" disabled=""></kv-calendar-day>
            <kv-calendar-day day="4" disabled=""></kv-calendar-day>
            <kv-calendar-day day="5" disabled=""></kv-calendar-day>
            <kv-calendar-day day="6" disabled=""></kv-calendar-day>
            <kv-calendar-day day="7" disabled=""></kv-calendar-day>
            <kv-calendar-day day="8" disabled=""></kv-calendar-day>
            <kv-calendar-day day="9" disabled=""></kv-calendar-day>
            <kv-calendar-day day="10" disabled=""></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-calendar>
`;
